--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
     port: 18080
 spring:
     datasource:
-        url: jdbc:mysql://47.106.153.201:3306/huawei_AR?nullCatalogMeansCurrent=true
+        url: jdbc:mysql://47.106.153.201:3306/huawei_AR
         username: root
         password: "081337"
         driver-class-name: com.mysql.cj.jdbc.Driver
